spacing issue fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -113,11 +113,6 @@ button[aria-label="Close"]:focus {
 
 
 // material
-.input-bottom-padding-0 {
-  .mat-form-field-wrapper {
-    padding-bottom: 0;
-  }
-}
 
 mat-checkbox {
   label {
